--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -43,8 +44,9 @@ header {
 
     backdrop-filter: blur(8px);
     border-radius: 35px;
-    box-shadow: inset 0 0 10px 2px rgb(170, 170, 170), 0 0 30px 12px rgb(170, 170, 170);
-    border: 2px solid rgb(170, 170, 170);
+    /* box-shadow: inset 0 10px 10px 5px rgb(170, 170, 170), 0 0 30px 12px rgb(170, 170, 170); */
+    box-shadow: 0 0 30px 12px rgb(170, 170, 170);
+    /* border: 2px solid rgb(170, 170, 170); */
 
     display: flex;
     align-items: center;
@@ -119,7 +121,7 @@ header {
 
     .menu * {
         width: 14%;
-        height: 85%;
+        height: 70%;
         border-radius: 20px;
         /* border: 1px solid black; */
 
@@ -134,11 +136,12 @@ header {
         justify-content: center;
         font-weight: 700;
         font-size: 0.85vw;
-        transition: box-shadow 0.15s ease, background 0.15s ease, font-size 0.15s ease;
+        transition: box-shadow 0.15s ease, background 0.15s ease, font-size 0.15s ease, width 0.15s ease;
         cursor: pointer;
     }
 
         .menu *:hover {
+            width: 16%;
             box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.5);
             /* backdrop-filter: blur(25px); */
             background: rgb(230, 230, 230);
@@ -151,8 +154,63 @@ main {
     width: 70%;
     height: 65%;
 
-    backdrop-filter: blur(8px);
+    backdrop-filter: blur(5px);
     border-radius: 35px;
-    border: 2px solid rgb(170, 170, 170);
-    box-shadow: inset 0 0 10px 2px rgb(170, 170, 170), 0 0 30px 12px rgb(170, 170, 170);
+    /* border: 2px solid rgb(170, 170, 170); */
+    /* box-shadow: inset 0 0 10px 2px rgb(170, 170, 170), 0 0 30px 12px rgb(170, 170, 170); */
+    box-shadow: 0 0 30px 12px rgb(170, 170, 170);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.test {
+    width: 35%;
+    height: 85%;
+    overflow: hidden;
+    /* border: 1px solid black; */
+    border-radius: 70px;
+    /* padding: 1.75vw; */
+    display: flex;
+    flex-direction: row;
+
+    box-shadow: 0 0 25px 12px rgb(170, 170, 170);
+    background: rgba(255, 255, 255, 0.45);
+
+    transform: perspective(800px) rotatey(0deg);
+    transition: transform 0.35s ease;
+}
+        .test:hover {
+            transform: perspective(1000px) rotatey(20deg);
+        }
+    .test .img_wrapper {
+        width: 50%;
+        height: 100%;
+        /* overflow: hidden; */
+        /* border: 1px solid black; */
+        /* border-top-left-radius: 35px;
+        border-bottom-left-radius: 35px; */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+        .test .img_wrapper img {
+            height: 55vh;
+        }
+
+    .test .text_wrapper {
+        width: 50%;
+        height: 100%;
+        overflow: hidden;
+        /* border: 1px solid black; */
+        backdrop-filter: blur(40px);
+        padding: 25px;
+
+        font-weight: 500;
+        font-size: 0.85vw;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
