--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
     width: 100vw;
     height: 100vh;
-    background: rgb(230, 230, 230);
+    background: white;
     overflow: hidden;
     box-shadow: inset 0 0 30px 25px rgb(130, 130, 130);
 
@@ -144,7 +144,7 @@ header {
             width: 16%;
             box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.5);
             /* backdrop-filter: blur(25px); */
-            background: rgb(230, 230, 230);
+            background: white;
             font-size: 1vw;
         }
 
@@ -156,34 +156,84 @@ main {
 
     backdrop-filter: blur(5px);
     border-radius: 35px;
-    /* border: 2px solid rgb(170, 170, 170); */
-    /* box-shadow: inset 0 0 10px 2px rgb(170, 170, 170), 0 0 30px 12px rgb(170, 170, 170); */
+
     box-shadow: 0 0 30px 12px rgb(170, 170, 170);
 
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: center; 
+    justify-content: space-evenly;
+
+    /* white-space: nowrap; */
+
+    overflow: hidden;
+                                        /* quitar despues <<<================================ */
+    
+    /* position: relative; */
+
 }
 
+    .news_wrapper {
+        height: 80%;
+        /* width:70vw; */
+        width: 1000vw;
+        /* border: 1px solid black; */
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        /* justify-content: space-evenly; */
+    }
+
 .test {
-    width: 30%;
+
+    /* position: absolute; */
+    /* margin: auto; */
+    /* margin-left: 30px;
+    margin-right: 30px; */
+
+    /* width: 20vw;
+    height: 100%; */
+
+
+        /* medio */
+    /* width: 17vw;
+    height: 90%;
+    font-size: 0.6vw; */
+
+        /* mini */
+    width: 14vw;
     height: 80%;
+    font-size: 0.5vw;
+
+
+
+
+
+
+    /* font-size: 0.77vw; */
+
     overflow: hidden;
-    /* border: 3px solid rgb(0, 0, 0); */
     border-radius: 70px;
     /* padding: 1.75vw; */
+
+    /* display: inline-block; */
+
+
+
     display: flex;
     flex-direction: row;
 
-    box-shadow: 0 0 25px 12px rgb(140, 140, 140);
+    box-shadow: 0 0 25px 12px rgb(110, 110, 110);
     background: rgba(255, 255, 255, 0.45);
 
-    transform: perspective(800px) rotatey(0deg);
-    transition: transform 0.35s ease;
+    transform: perspective(800px) rotatey(55deg);
+    transition: transform 0.25s ease, width 0.25s ease, height 0.25s ease, font-size 0.25s ease;
 }
         .test:hover {
-            transform: perspective(1000px) rotatey(20deg);
-        }
+            transform: perspective(1000px) rotatey(0deg);
+            width: 20vw;
+            height: 100%;
+            font-size: 0.7vw;
+        } 
     .test .img_wrapper {
         width: 50%;
         height: 100%;
@@ -205,11 +255,12 @@ main {
         overflow: hidden;
         /* border: 1px solid black; */
         /* backdrop-filter: blur(40px); */
-        padding: 15px;
+        padding: 20px;
         color: rgba(255,255,255,0.65);
+        background: rgba(0,0,0,0.65);
 
         font-weight: 350;
-        font-size: 0.77vw;
+        /* font-size: 0.77vw; */
         display: flex;
         align-items: center;
         flex-direction: column;
